deploy/kubernetes/src/ops/ingress.yml
#@ load("@ytt:data", "data")

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front-end
  namespace: watchn
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    name: front-end
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: front-end
          servicePort: 80
